# fusionx-clean-ui

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/fusionx_vulkan/: FusionXVulkanBootstrap.cpp  FusionXVulkanBootstrap.h  FusionXVulkanJni.cpp  FusionXVulkanRenderer.cpp  FusionXVulkanRenderer.h
docs/: build-history.md  dedicated-scrub-architecture.md  engine-architecture.md  engine-build-plan.md  engine-contracts-v1.md  phase-0-baseline-lock.md  phase-1-engine-project-model.md  phase-2-project-time-authority.md  phase-3-adjacent-runtime-handoff.md  vulkan-backend-pivot.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/media/: device_media_library_bridge.dart  native_media_thumbnailer.dart
lib/core/theme/: app_theme.dart
lib/engine/bridge/: fusionx_debug_picker.dart  fusionx_engine_bridge.dart  method_channel_fusionx_engine_bridge.dart
lib/engine/contracts/: engine_contracts.dart
lib/engine/models/: engine_time.dart  project_playback_models.dart  project_settings.dart  project_sync_models.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: README.md
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+31 files in other folders)
